[package]
name = "crony"
version = "0.2.1"
authors = ["Tibor Hudik <tibor@barrage.net>"]
edition = "2018"
license = "MIT"
keywords = ["cron", "runner"]
description = "Simple cron runner that spawns another thread to run your cron jobs"
repository = "https://github.com/barrage/crony"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cron = "0.7.0"
chrono = "0.4"
log = "0.4.0"
lazy_static = "1.4.0"
